implemented giving the boxes colors

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     </div>
     <div class="main">
         <div class="options"></div>
-        <div class="options">2</div>
-        <div class="options">3</div>
+        <div class="options"></div>
+        <div class="options"></div>
         <div class="options"></div>
         <div class="options"></div>
         <div class="options"></div>
