--- a/index.html
+++ b/index.html
@@ -15,16 +15,21 @@
    </div>
     <div class="section">
         <div><button>Replay</button></div>
-        <div><button>Easy</button></div>
-        <div><button>Hard</button></div>
+        <div class="message"></div>
+        <div>
+            <button>Easy</button>
+            <button>Hard</button>
+        </div>
     </div>
     <div class="main">
-        <div class="options"></div>
-        <div class="options"></div>
-        <div class="options"></div>
-        <div class="options"></div>
-        <div class="options"></div>
-        <div class="options"></div>
+        <div class="option-container">
+            <div class="options"></div>
+            <div class="options"></div>
+            <div class="options"></div>
+            <div class="options"></div>
+            <div class="options"></div>
+            <div class="options"></div>
+        </div>
     </div>
    </div> 
    <script src="index.js"></script>
