--- a/index.html
+++ b/index.html
@@ -10,27 +10,37 @@
 <body>
    <div class="container">
     <div class="header">
-        <h1>Guess The Color:</h1><br>
+        <h1>Guess the Color</h1><br>
         <h2 class="color"></h2>
+        <div class="controls">
+            <div><button id="replay">new game</button></div>
+            <div class="message"></div>
+            <div>
+                <button id="easy">Easy</button>
+                <button id="hard">Hard</button>
+            </div>
+        </div>
    </div>
-    <div class="section">
-        <div><button>Replay</button></div>
+    <!-- <div class="section">
+        <div><button>new game</button></div>
         <div class="message"></div>
         <div>
             <button>Easy</button>
             <button>Hard</button>
         </div>
-    </div>
-    <div class="main">
-        <div class="option-container">
-            <div class="options"></div>
-            <div class="options"></div>
-            <div class="options"></div>
-            <div class="options"></div>
-            <div class="options"></div>
-            <div class="options"></div>
+    </div> -->
+        <div id="option-container" >
+            <div class="first">
+                <div class="options"></div>
+                <div class="options"></div>
+                <div class="options"></div>
+            </div>
+            <div class="second">
+                <div class="options"></div>
+                <div class="options"></div>
+                <div class="options"></div>
+            </div>
         </div>
-    </div>
    </div> 
    <script src="index.js"></script>
 </body>
